--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
     document.getElementById('result').innerHTML = `
       <strong>Estimated Emissions:</strong><br>
-      Emission per km: <strong>${convertedPerKm.toFixed(2)} kg CO₂-eq</strong><br>
-      Total emission: <strong>${convertedTotal.toFixed(2)} kg CO₂-eq</strong>
+      Emission per km: <strong>${convertedPerKm.toFixed(2)} kg C/km</strong><br>
+      Total emission: <strong>${convertedTotal.toFixed(2)} kg C</strong>
     `;
   }
 </script>
